--- a/api-pets/package.json
+++ b/api-pets/package.json
@@ -55,7 +55,10 @@
     "@loopback/rest": "^13.0.0",
     "@loopback/rest-explorer": "^6.0.0",
     "@loopback/service-proxy": "^6.0.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "loopback-connector-mongodb": "^7.0.0-alpha.1",
+    "mongoose": "^7.4.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -63,6 +66,7 @@
     "@loopback/eslint-config": "^14.0.0",
     "@loopback/openapi-v3": "^9.1.1",
     "@loopback/testlab": "^6.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^14.18.47",
     "eslint": "^8.40.0",
     "source-map-support": "^0.5.21",
